fix(angular/checkbox-panel): correct spacing in checkbox-panel
- Fix vertical spacing in checkbox-panel and radio-button-panel on small devices.

- Adjust spacing of checkbox-panel-warning according to [design specification](https://previewserver.sbb.ch/projects/SBBCH/2022-03-16_15-48-37_8e2fe31b7b069c0185eed602135b40f72f44bb13/prod/webshop/modules/wm22_-_webshop_checkbox_radio_panel/wm22_-_webshop_checkbox_radio_panel.html)

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1851,11 +1851,6 @@ textarea {
   display: flex;
   flex: 1 1 50%;
   padding-right: calc(#{pxToRem(8)} * var(--sbb-scaling-factor));
-  margin-bottom: calc(#{pxToRem(8)} * var(--sbb-scaling-factor));
-
-  @include mq($from: tablet) {
-    margin-bottom: 0;
-  }
 }
 
 .sbb-selection-panel-subtitle {
@@ -1868,12 +1863,14 @@ textarea {
   flex: 1 100%;
   order: 3;
   color: var(--sbb-color-grey);
+  margin-top: calc(#{pxToRem(8)} * var(--sbb-scaling-factor));
 
   @include mq($from: tablet) {
     padding-left: calc(#{pxToRem(24)} * var(--sbb-scaling-factor));
     padding-right: calc(#{pxToRem(8)} * var(--sbb-scaling-factor));
-    flex-basis: auto;
+    flex-basis: 0%;
     order: initial;
+    margin-top: initial;
   }
 }
 
